@@ -15,6 +15,10 @@ Core
 
 * refined error message for missing actions.
 
+* Vend::Interpolate::interpolate_html returns undef on undefined input text.
+  This allows to determine whether $Tag->include fails or just produces an
+  empty string.
+
 Search
 ------
 
